ajout Etats et modification IA+ IAAssistance